k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webshop-frontend
  labels:
    app: webshop-frontend
spec:
  type: ClusterIP
  selector:
    app: webshop-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
