k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webshop-frontend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - webshop-demo.oskott.com
      secretName: webshop-frontend-tls
  rules:
    - host: webshop-demo.oskott.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webshop-frontend
                port:
                  number: 80
